Web interface: Fix project rename field on small devices.

--- a/static/worktime/css/main.css
+++ b/static/worktime/css/main.css
@@ -56,6 +56,7 @@
 #era-rename-field {
   background-color: #f8f8f8;
   border: 1px solid #ccc;
+  width: calc(100% - 100px);
 }
 
 #intro .panel-heading {
